--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "await-to-js": "^3.0.0",
+    "moment": "^2.29.4",
+    "nock": "^13.3.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
