--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,12 @@ services:
       context: ./
       dockerfile: Dockerfile
       args:
-        WOMPI_PRIVATE_KEY: $WOMPI_PRIVATE_KEY_TEST
-        WOMPI_PUBLIC_KEY: $WOMPI_PUBLIC_KEY_TEST
+        PAYMENT_PRIVATE_KEY: $PAYMENT_PRIVATE_KEY_TEST
+        PAYMENT_PUBLIC_KEY: $PAYMENT_PUBLIC_KEY_TEST
+        PAYMENT_URL_SANDBOX: $PAYMENT_URL_SANDBOX
+        PAYMENT_URL_PRODUCTION: $PAYMENT_URL_PRODUCTION
+        MODE_DEV: $MODE_DEV
+        PAYMENT_INTEGRITY_SECRET: $PAYMENT_INTEGRITY_SECRET
     ports:
       - 3000:3000
   postgres_db:
