--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage --detectOpenHandles",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "testTravels": "node runTest.js"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -77,7 +78,8 @@
     ],
     "moduleNameMapper": {
       "^@wompi/wompi(|/.*)$": "<rootDir>/libs/wompi/src/$1",
-      "^@Database/database(|/.*)$": "<rootDir>/libs/database/src/$1"
+      "^@Database/database(|/.*)$": "<rootDir>/libs/database/src/$1",
+      "^@Payment/payment(|/.*)$": "<rootDir>/libs/payment/src/$1"
     }
   }
 }
