--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,17 +18,17 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@wompi/wompi": [
-        "libs/wompi/src"
-      ],
-      "@wompi/wompi/*": [
-        "libs/wompi/src/*"
-      ],
       "@Database/database": [
         "libs/database/src"
       ],
       "@Database/database/*": [
         "libs/database/src/*"
+      ],
+      "@Payment/payment": [
+        "libs/payment/src"
+      ],
+      "@Payment/payment/*": [
+        "libs/payment/src/*"
       ]
     }
   }
