--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,9 @@ services:
       context: ./
       dockerfile: Dockerfile
       args:
-        PAYMENT_PRIVATE_KEY: $PAYMENT_PRIVATE_KEY_TEST
-        PAYMENT_PUBLIC_KEY: $PAYMENT_PUBLIC_KEY_TEST
-        PAYMENT_URL_SANDBOX: $PAYMENT_URL_SANDBOX
-        PAYMENT_URL_PRODUCTION: $PAYMENT_URL_PRODUCTION
+        PAYMENT_PRIVATE_KEY: $PAYMENT_PRIVATE_KEY
+        PAYMENT_PUBLIC_KEY: $PAYMENT_PUBLIC_KEY
+        PAYMENT_URL: $PAYMENT_URL
         MODE_DEV: $MODE_DEV
         PAYMENT_INTEGRITY_SECRET: $PAYMENT_INTEGRITY_SECRET
     ports:
